lintian (2.5.16) UNRELEASED; urgency=low

  XXX: generate tag summary with private/generate-tag-summary

  * checks/apache2.pm:
    + [NT] Fix F-P apache2-deprecated-auth-config for
      "AllowOverride".  Thanks to Jean-Michel Vourgère
      for the report and an initial patch.
      (Closes: #717621)
  * checks/changelog-file.{desc,pm}:
    + [BR] Add check for dh-make reminder to insert the
      bug number of the ITP bug.  (Closes: #690273)
  * checks/control-file.{desc,pm}:
    + [BR] Add check for field name being duplicated in
      the value of the field.  (Closes: #711069)
  * checks/cruft.pm:
    + [NT] Skip d/README.Debian and d/README.source when
      checking for non-free licenses.  Mentions here are
      presumably just false-positives.  Thanks to
      Marcelo Jorge Vieira for the report and the initial
      patch.  (Closes: #718575)
  * checks/deb-format.pm:
    + [NT] Apply patch from Guillem Jover to fix a wrong
      tag being emitted on lzma compressed udebs.
      (Closes: #718337)
  * checks/debhelper.{desc,pm}:
    + [NT] Remove tag for dh_pycentral being obsolete.
      Thanks to Luca Falavigna for the report.
    + [BR] Fix false-negative in the brace expansion check
      when the comma was next to one of the braces.
      (Closes: #708381)
  * checks/files.{desc,pm}:
    + [NT] Remove tag for missing dependency on
      python-central.  Thanks to Luca Falavigna for the
      report.  (Closes: #718690)
  * checks/init.d.{desc,pm}:
    + [NT] Revert init.d-script-call-internal-API for now.
      Refer to #710559 for more information.
  * checks/patch-systems.{desc,pm}:
    + [BR] Add tag for DEP-3 template descriptions.
      (Closes: #717633)
  * checks/po-debconf.{desc,pm}:
    + [NT] Fix false-positive translated-default-field for
      fields preceeded by a "true" Deb822 comment.  Thanks
      to Ron Lee for the report.  (Closes: #637881)
  * checks/scripts.pm:
    + [NT] Stop emitting package-uses-local-diversion for