@@ -1,0 +1,6 @@
+Testname: binaries-golang
+Sequence: 6000
+Version: 1.0
+Description: Misc errors related to golang binaries
+Architecture: any
+Test-Against: statically-linked-binary
