@@ -7,6 +7,10 @@ lintian (2.5.16) UNRELEASED; urgency=low
       "AllowOverride".  Thanks to Jean-Michel Vourgère
       for the report and an initial patch.
       (Closes: #717621)
+  * checks/binaries.pm:
+    + [NT] Apply patch from Michael Stapelberg to exempt
+      golang-go binaries from statically-linked-binary
+      tag.  (Closes: #718404)
   * checks/changelog-file.{desc,pm}:
     + [BR] Add check for dh-make reminder to insert the
       bug number of the ITP bug.  (Closes: #690273)
